--- a/src/weather.css
+++ b/src/weather.css
@@ -5,6 +5,13 @@
   border-radius: 4px;
   color: #878787;
 }
+.container-form {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .Weather h1 {
   font-size: 24px;
   font-weight: 100;
@@ -14,6 +21,7 @@
 .Weather ul {
   margin: 0;
   padding: 0;
+  margin-top: 10px;
 }
 .Weather li {
   font-size: 16px;
