--- a/src/weather.css
+++ b/src/weather.css
@@ -1,16 +1,64 @@
+button {
+  border: none;
+  outline: none;
+  background-color: #cab5e6;
+  margin-left: 7px;
+  padding: 10px 20px;
+  font-size: 12px;
+  font-weight: 700;
+  color: #fff;
+  border-radius: 5px;
+  transition: all ease 0.1s;
+  box-shadow: 0px 5px 0px 0px #a9a4ed;
+}
+
+button:active {
+  transform: translateY(5px);
+  box-shadow: 0px 0px 0px 0px #a29bfe;
+}
 .Weather {
   font-family: arial, sans-serif;
   border: 1px solid #31255a;
   padding: 16px;
-  border-radius: 4px;
+  border-radius: 20px;
   color: #000000;
-  background-color: #75b4e3;
+  background-color: #ffffff;
 }
 .container-form {
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.InputContainer {
+  width: 210px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(
+    to bottom,
+    rgb(227, 213, 255),
+    rgb(255, 231, 231)
+  );
+  border-radius: 30px;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.075);
+}
+
+.input {
+  width: 200px;
+  height: 40px;
+  border: none;
+  outline: none;
+  caret-color: rgb(255, 81, 0);
+  background-color: rgb(255, 255, 255);
+  border-radius: 30px;
+  padding-left: 15px;
+  letter-spacing: 0.8px;
+  color: rgb(19, 19, 19);
+  font-size: 13.4px;
 }
 
 .Weather h1 {
